force-app/main/default/objects/Integration_Log__c/Integration_Log__c.object-meta.xml
<CustomObject>
    <description>GC 03/23/23: To be used on any integration. Will hold all and only the failures from the inbound and outbound messages.</description>
    <label>Integration Log</label>
    <nameField>
        <displayFormat>IL-{YYYYMMDD}-{000}</displayFormat>
        <label>Integration Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>