force-app/main/default/objects/Integration_Log__c/fields/Contracts_and_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Contracts_and_Invoices__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contracts and Invoices</label>
    <referenceTo>Contracts_and_Invoices__c</referenceTo>
    <relationshipLabel>Integration Logs</relationshipLabel>
    <relationshipName>Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>