force-app/main/default/objects/Integration_Log__c/fields/Error_Description__c.field-meta.xml
<CustomField>
    <fullName>Error_Description__c</fullName>
    <description>GC 03/23/23: Enter the error description. For example: Update failed. First exception on row 0 with id...</description>
    <label>Error Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>