force-app/main/default/objects/Integration_Log__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <description>GC 03/23/23: Saves the error type. For example: System.DmlException</description>
    <label>Error Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>