force-app/main/default/objects/Integration_Log__c/fields/Integration__c.field-meta.xml
<CustomField>
    <fullName>Integration__c</fullName>
    <description>GC 03/23/23: Name of the integration where the failure was detected.</description>
    <label>Integration</label>
    <length>18</length>
    <type>Text</type>
</CustomField>