force-app/main/default/objects/Integration_Log__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>GC 03/23/23: Saves the type of operation. Can be: GET, POST, DELETE, PUT, PATCH.</description>
    <label>Operation</label>
    <length>8</length>
    <type>Text</type>
</CustomField>