force-app/main/default/objects/Integration_Log__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <description>GC 03/23/23: Save the request that generated the issue.</description>
    <label>Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>