force-app/main/default/objects/Integration_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Contracts_and_Invoices__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Integration__c</columns>
    <columns>Operation__c</columns>
    <columns>Error_Type__c</columns>
    <columns>Error_Description__c</columns>
    <columns>Request__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>